@@ -523,12 +523,20 @@ static int parse_options(int argc, char **argv)
 		}
 	}
 
-	stderr = stdout;
+	/* Redirect stderr to stdout, note fflush()es are essential! */
+	fflush(stdout);
+	fflush(stderr);
+	if (dup2(STDOUT_FILENO, STDERR_FILENO) == -1) {
+		perror("Failed to redirect stderr to stdout");
+		exit(1);
+	}
+	fflush(stdout);
+	fflush(stderr);
 
 #ifdef DEBUG
 	if (!opt.debug)
-		if (!(stderr = fopen("/dev/null", "rw")))
-			perr_exit("Couldn't open /dev/null");
+		if (!freopen("/dev/null", "w", stderr))
+			perr_exit("Failed to redirect stderr to /dev/null");
 #endif
 
 	if (ver)
